[gd_scene load_steps=5 format=3 uid="uid://damfrs2ck2ugk"]

[ext_resource type="Script" path="res://levels/last_door.gd" id="1_4w1gw"]
[ext_resource type="LabelSettings" uid="uid://b33p2yrnnwkeq" path="res://cutscenes/intuduction.tres" id="2_qh6vm"]
[ext_resource type="FontFile" uid="uid://rn2vgoht588t" path="res://assets/lunchtime-doubly-so.regular.ttf" id="3_8n0xy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gigda"]

[node name="LastDoor" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_4w1gw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3.4, 1)
shape = SubResource("RectangleShape2D_gigda")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -8.0
offset_top = 1.0
offset_right = 64.0
offset_bottom = 24.0
scale = Vector2(0.804952, 0.931256)
text = "Proceed?"
label_settings = ExtResource("2_qh6vm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Yes" type="Button" parent="Control"]
layout_mode = 0
offset_left = -6.0
offset_top = 20.0
offset_right = 123.0
offset_bottom = 46.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("3_8n0xy")
theme_override_font_sizes/font_size = 16
text = "Yes - [F]"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="Control/Yes" to="." method="_on_yes_pressed"]
